# pixelator

./: .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATIONS.md  CONTRIBUTING.md  DEVELOPERS.md  LICENSE  README.md  RELEASING.md  Taskfile.yml  USAGE.md  docker-bake.hcl  environment.yml  pbmc_test_celltype_annotations.h5ad  pyproject.toml  tasks.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  mamba_environment.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/build-dev-image/: action.yml
.github/actions/setup-image-build-env/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/x86_64_feature_level/: action.yml
.github/workflows/: build.yml  checks.yml  cla.yml  docs.yml  integration-tests.yml  nf-core-pixelator-tests.yml  on_commit.yml  publish-pypi.yml  tests.yml  workflow-tests.yml
conda-recipe/pixelator/: meta.yaml
containers/: base.Dockerfile  dev.Dockerfile  prod.Dockerfile
docs/: api.rst  conf.py  developers.rst  index.rst  installation.rst
scripts/: run_pixeldataset_benchmark_compare.sh
src/pixelator/: __init__.py  __main__.py  exception.py  exceptions.py  feature_flags.py  logging.py  marks.py  pixeldataset.py  statistics.py  types.py  utils.py
src/pixelator/amplicon/: __init__.py  process.py  statistics.py
src/pixelator/analysis/: __init__.py  analysis_engine.py  permute.py  refactored_analysis.py
src/pixelator/annotate/: __init__.py  aggregates.py  cell_calling.py  constants.py
src/pixelator/cli/: __init__.py  adapterqc.py  amplicon.py  analysis.py  annotate.py  collapse.py  common.py  demux.py  graph.py  layout.py  logging.py  main.py  misc.py  plugin.py  preqc.py  report.py
src/pixelator/collapse/: __init__.py  constants.py  process.py
src/pixelator/common/: __init__.py  duckdb_utils.py  exceptions.py  marks.py  statistics.py  types.py
src/pixelator/config/: __init__.py  assay.py  config_class.py  config_instance.py  panel.py  plugin.py  utils.py
src/pixelator/demux/: __init__.py  process.py
src/pixelator/graph/: __init__.py  community_detection.py  constants.py  graph.py  node_metrics.py  utils.py
src/pixelator/layout/: PNA055_Sample07_S7.layout.pxl  PNA055_Sample07_S7.meta.json  PNA055_Sample07_S7.report.json
src/pixelator/mpx/: __init__.py  __main__.py  feature_flags.py  logging.py
src/pixelator/pixeldataset/: __init__.py  aggregation.py  backends.py  datastores.py  file_formats.py  precomputed_layouts.py  types.py  utils.py
src/pixelator/plot/: __init__.py  constants.py  layout_plots.py  spatial_analysis_plots.py
src/pixelator/pna/: __init__.py  analysis_engine.py  anndata.py
src/pixelator/qc/: __init__.py  process.py
src/pixelator/report/: __init__.py  workdir.py
src/pixelator/resources/: __init__.py
src/pixelator/test_utils/: __init__.py  adapterqc.py  amplicon.py  analysis.py  annotate.py  base.py  collapse.py  collector.py  config.py  demux.py  graph.py  layout.py  preqc.py  report.py  simulation.py  workflow.py  workflow_context.py
src/pixelator/utils/: __init__.py  simplification.py
src/pixelator_mpx/: __init__.py  __main__.py  feature_flags.py  logging.py
src/pixelator_mpx/amplicon/: __init__.py  process.py  statistics.py
src/pixelator_mpx/analysis/: __init__.py  (+2 more)
tests/: Taskfile.yml  __init__.py  conftest.py  test_feature_flags.py  test_integration.py  test_logging.py  test_marks.py  test_pixelator.py  test_pixeldataset.py  test_plugin.py  test_simplification.py  test_statistics.py  test_tools.py  test_utils.py
tests/amplicon/: __init__.py  test_amplicon.py  test_cli.py  test_statistics.py
tests/analysis/: test_analysis_engine.py
tests/annotate/: __init__.py  test_aggregates.py  test_annotate.py  test_cell_calling.py
tests/collapse/: __init__.py  test_process.py
tests/common/: __init__.py  test_adaptive_core_expansion.py  test_cell_annotation.py  test_node_pls.py  test_simplification.py  test_statistics.py  test_utils.py
tests/config/: __init__.py  test_config.py
tests/data/: datasets.md  dsb_normalization_test_output.csv  dsb_normalization_test_output_no_isotype.csv  human-sc-immunology-spatial-proteomics-2-v0.1.0-duplicate-alias.csv  test_data.collapsed.csv  test_edge_list.csv  test_panel.csv  test_panel_v2.csv
tests/demux/: test_process.py
tests/graph/: __init__.py  conftest.py  test_community_detection.py  test_graph.py  test_graph_utils.py  test_node_metrics.py
tests/integration/: __init__.py  conftest.py  test_full_D21.yaml  test_small_D21.yaml  test_small_mpx_v2.yaml
tests/mpx/: Taskfile.yml  conftest.py  test_feature_flags.py  test_integration.py  test_logging.py  test_marks.py  test_pixelator.py  test_plugin.py  test_simplification.py  test_statistics.py  test_tools.py  test_utils.py
tests/pixelator_mpx/: __init__.py  conftest.py  test_feature_flags.py  test_integration.py  test_logging.py  test_pixelator.py  test_plugin.py  test_utils.py
tests/pixeldataset/: test_aggregation.py  test_backends.py  test_datastores.py  test_pixeldataset.py  test_precomputed_layouts.py  test_types.py  test_utils.py
tests/plot/: test_plot.py
tests/pna/: __init__.py  conftest.py  test_analysis_engine.py  test_anndata.py  test_cli_common.py  test_combine_collapse.py  test_sample_calling.py  test_sample_calling_cli.py  test_utils.py
tests/report/: __init__.py  conftest.py  test_adapterqc.py  test_amplicon.py  test_analysis.py  test_annotate.py  test_cli_info.py  test_collapse.py  test_data_collection.py  test_demux.py  test_graph.py  test_layout.py  test_preqc.py  test_qc_report.py  test_report.py  test_report_sample_metadata.py  test_reporting.py  test_sample_metadata.py  test_summary_statistic.py  test_workdir.py
tests/resources/: test_panel.py
tests/utils/: __init__.py  test_utils.py  utils.py
utils/: check_copyright.py  convert_sphinx_to_google.py  docstring_audit.py  enrich_placeholder_docstrings.py  fill_missing_docstrings.py  fix_docstring_sections.py  polish_docstrings.py  restore_docstrings_from_dev.py  sync_docstring_args.py  wrap_docstring_lines.py
(+887 files in other folders)
