[tool]
[tool.poetry]
name = "pixelgen-pixelator"
version = "0.0.0"
homepage = "https://github.com/PixelgenTechnologies/pixelator"
repository = "https://github.com/PixelgenTechnologies/pixelator"
documentation = "https://software.pixelgen.com"
description = "A command-line tool and library to process and analyze sequencing data from Molecular Pixelation (MPX) assays."
authors = ["Pixelgen Technologies AB <developers@pixelgen.com>",]
maintainers = ["Alvaro Martinez Barrio <alvaro.martinez.barrio@pixelgen.com>"]
readme = "README.md"
license =  "GPL-2.0-only"
keywords = ["protein", "single-cell", "molecular-pixelation", "spatial", "proteomics"]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11']

packages = [
    { include = "pixelator", from = "src" },
    { include = "tests", format = "sdist" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
click = "*"
yapf = "*"
cutadapt = ">=4.2"
umi_tools = "<=1.1.4"
pyfastx = "*"
yappi = "*"
igraph = "0.10.*"
pandas = "^2.0.0"
numpy = "<1.24.0"
annoy = "<=1.17.0"
esda = "*"
libpysal = "*"
xopen = "*"
anndata = ">=0.8.0"
numba = ">=0.56.4"
scanpy = "*"
leidenalg = "*"
lxml = "*"
cssselect = "*"
typing_extensions = "*"
scipy = "*"
pyarrow = ">=13,<15"
semver = "^3.0.0"
ruamel-yaml = "^0.17.21"
pydantic = "^1.10.7"
polars = "^0.19"
importlib-resources = "^5.12.0"
flake8-docstrings = "^1.7.0"
louvain = "^0.8.1"
fsspec = "^2023.9.0"
fastparquet = "^2023.8.0"
graspologic = "^3.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.244"
pre-commit = "^3.2.2"
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
tox-current-env = "^0.0.11"
black = "*"
mypy = "*"
pytest-watch = "*"
pytest-snapshot = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-dependency = "*"
sphinx-copybutton = ">=0.5.2"
sphinx-design = ">=0.4.1"
sphinx-inline-tabs = ">=2023.4.21"
myst-parser = "^2.0.0"
furo = "^2023.5.20"
pytest-benchmark = "^4.0.0"


[tool.poetry.scripts]
pixelator = 'pixelator.cli:main_cli'

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.1"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
pythonpath = [ "src" ]
markers = [
    "integration_test: Marks a test as an integration test, which is often slow (deselect with '-m \"not integration_test\"')",
    "workflow_test: Marks a test as a complete pixelator workflow, which is extremely slow (deselect with '-m \"not workflow_test\"')"]

addopts = ["-p no:pytest-workflow", "-m not workflow_test", "--benchmark-disable"]
filterwarnings = ["ignore::DeprecationWarning",]

[tool.ruff]

[tool.ruff.per-file-ignores]
"pixelator/report/__init__.py" = ["E501"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
# Metadata is unset, only add sha when not on a version tag
dirty = true
style = "pep440"
bump = false
latest-tag = true
strict = false

[tool.poetry-dynamic-versioning.substitution]
files = [ "src/pixelator/__init__.py", ]
